--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "doc:build": "docker build --file ./container/Dockerfile --tag tech:assessment --force-rm .",
     "doc:run": "docker run -it --rm --env-file ./container/.env -p 3000:3000 -p 5005:5005 tech:assessment",
-    "doc:test": "node scripts/docTest.js",
+    "doc:test": "./node_modules/mocha/bin/mocha",
     "api": "nodemon --watch ./server --watch ./configs --exec 'node ./server/index.js'",
     "dev": "yarn start",
     "format": "yarn pretty && yarn eslint",
@@ -66,5 +66,9 @@
     "not ie <= 9",
     "last 2 versions"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
+    "mysql": "^2.18.1"
+  }
 }
